# sdl-xbmc-remote

./: CMakeLists.txt  README.md  inputwrapper.cpp  inputwrapper.h  main.cpp  xbmcremote.cpp  xbmcremote.h
